{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "23a94454-8651-406c-8f9f-f5005c81295c",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "b2ce2200-eeb3-4689-97db-68b01d72a2ae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "be0365e9-4c04-42b6-b168-7ba85b3b9444",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "0e765afe-ba0e-443d-995f-1b152628015d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress_1",
                    "type": "PassThrough",
                    "id": "9ae24260-1077-4286-ada9-2a26dc1ab188",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition_1",
                    "type": "PassThrough",
                    "id": "78e8222e-ee6b-41e7-b598-aa663dadac39",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchTap",
                    "type": "Button",
                    "id": "938898f4-90d9-4edb-b514-a478e5fe068c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cc132d7b-5c26-4013-82cf-d5ce159f00a5",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bb76cc4-0853-44d3-bdcc-67472a855d1d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "676d7d83-d0cf-4440-9f1d-47bdbf16cd56",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec5db7db-f947-4a3e-a2e4-aad73a8c3bec",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b504ebf9-7744-4e27-9ed0-5543c52bd7e2",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6375e09-a910-4bda-a929-248ce7397677",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TouchTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}